--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.4",
     "next": "^7.0.2",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react-dom": "^16.7.0",
+    "react-markdown": "^4.0.6"
   }
 }
