--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "node-sass": "^4.11.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-markdown": "^4.0.6"
+    "react-markdown": "^4.0.6",
+    "react-modal": "^3.8.1",
+    "react-responsive-modal": "^3.6.0"
   }
 }
